# tbsequencing-ncbi-sync

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Taskfile.yml  bitbucket-pipelines.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: push.yml  terraform-apply.yml  terraform-plan.yml  terraform.yml
devops/backends/prodf3/: main.tf  terraform.tfstate  terraform.tfstate.backup
devops/backends/prodf4/: main.tf
devops/envs/dataart-2025/: iam.tf
devops/envs/dataart-dev-2025/: data.tf  iam.tf  iam_policy.tf  locals.tf  sync.json
devops/envs/dataart-test/: batch.tf  data.tf  provider.tf  variables.tf
devops/envs/db-for-prod/: batch.tf  provider.tf  terraform.tfvars
devops/envs/example-env/: iam_policy.tf
devops/envs/pentest/: cloudwatch.tf  ecr.tf  iam.tf  taxonomy.json
devops/envs/prod-f4/: batch.tf  locals.tf  provider.tf  step_function.tf  terraform.tfvars  variables.tf
devops/envs/prod-unicc/: backend.tf  batch.tf  cloudwatch.tf  data.tf  iam.tf  locals.tf  provider.tf  step_function.tf  sync.json  terraform.tfvars  variables.tf
devops/envs/template/: iam_policy.tf  variables.tf
devops/envs/test/: batch.tf  data.tf  iam.tf  provider.tf  step_function.tf  sync.json  taxonomy.json  terraform.tfvars
devops/example-env/: batch.tf  cloudwatch.tf  data.tf  iam_policy.tf  provider.tf  step_function.tf
devops/taskfiles/: Taskfile-Audit.yml  Taskfile-Docker.yml  Taskfile-Python.yml  Taskfile-Terraform.yml
src/: __init__.py  discovery.ipynb  main.py
src/common/: logs.py  mocks_data.py  stats.py
src/db/: database.py
src/entrez/: advanced.py  base.py  caching.py  models.py
src/sync_projects/: main.py  sql.py
src/sync_samples/: extract_biosample.py  extract_resistance_data.py  extractors.py  main.py  models.py  sql.py
src/sync_sequencing_data/: extract_sra_data.py  main.py  models.py  save_sra_data.py  sql.py
src/sync_taxonomy/: main.py
src/wipe_data/: main.py
tests/: __init__.py  fixtures.py
tests/consistency/: test_integration_aliases.py
tests/env/: docker-compose.yml
tests/env/sql/: initial.sql
tests/sync_samples/: test_integration_basic.py
tests/sync_sequencing_data/: test_detect_contract_changes.py  test_integration_alias_exists.py  test_integration_basic_multiple.py  test_integration_correlated_hashes.py  test_integration_duplications.py  test_integration_duplications_by_lib_name.py  test_integration_empty_hashes.py
tests/update_biosample/: test_country.py  test_extract_resistance_data.py  test_geo_samples.py  test_get_info_disease.py  test_get_info_utils.py  test_host_name.py  test_isolation_source.py  test_phenotypes.py
tests/update_sra/: test_empty_generic_data.py  test_experiment_biosample_name.py  test_generic_data.py  test_main.py
tests/utils/: database.py  entrez.py
tests/utils/ncbi_mocks/: experiment_packages.py  experiments.py  run.py  sra_files.py  translator.py
